# maki

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  install.ps1  install.sh
maki-agent/src/: command.rs  headless.rs  lib.rs  permissions.rs  types.rs
maki-agent/src/agent/: compaction.rs  history.rs  instructions.rs  mod.rs  run.rs  streaming.rs  (+1 more)
maki-config/src/: lib.rs  providers.rs
maki-docgen/src/: gen_providers.rs  gen_tools.rs  lua_util.rs
maki-lua/: Cargo.toml
maki-lua/src/: language.rs  lib.rs  loader.rs  runtime.rs
maki-lua/tests/: batch_policy.rs  plugin_host.rs  real_plugins_restore.rs  spec.rs
maki-markdown/: Cargo.toml
maki-markdown/src/: lib.rs
maki-providers/: Cargo.toml
maki-providers/src/: lib.rs  manifest.rs  model.rs  model_registry.rs  provider.rs  types.rs
maki-storage/src/: paths.rs  sessions.rs
maki-ui/: Cargo.toml
maki-ui/src/: chat.rs  event_loop.rs  highlight.rs  markdown.rs  mock.rs  theme.rs
plugins/bash/: init.lua
plugins/batch/: init.lua
plugins/edit/: init.lua
plugins/grep/: init.lua
plugins/index/: indexer.lua  init.lua
plugins/memory/: init.lua
plugins/question/: init.lua  question_form.lua  question_helpers.lua
plugins/read/: init.lua
plugins/skill/: plugin_dev.lua  plugin_dev_reference.lua
plugins/task/: init.lua
plugins/view_image/: init.lua
plugins/webfetch/: init.lua
plugins/websearch/: init.lua
plugins/write/: init.lua
site/: build.sh  index.html
src/: print.rs  sdk_mode.rs  update.rs
src/cmd/: acp.rs  subcmd.rs  tui.rs
(+133 files in other folders)
